fix: z-index

--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -21,7 +21,7 @@
 
 .rest-icon {
   right: -1px;
-  z-index: 9;
+  z-index: 20;
 
 
   background-color: $button-color-additional;
